<resources>
    <string name="app_name">FKSC</string>


    <!-- Bottom Navigation View Names -->
    <string name="filiados">Filiados</string>
    <string name="campeonatos">Campeonatos</string>
    <string name="ranking">Ranking</string>
    <string name="profile">Perfil</string>


    <!-- ContentDescriptions for images -->
    <string name="logofksc">logoFKSC</string>
    <string name="menu">menu</string>

    <!-- Affiliates' types -->
    <string name="athletes">ATLETAS</string>
    <string name="dojos">DOJÔS</string>
    <string name="black_belts">PRETAS</string>


    <!-- Ranking's types-->
    <string name="por_campeonato">POR CAMPEONATO</string>
    <string name="geral">GERAL</string>
    <string name="global">GLOBAL</string>
    <string name="contact">CONTATO</string>


    <string name="fksc_go">FKSC-GO</string>

    <!-- Register Names -->
    <string name="login">Entrar</string>
    <string name="register">Registrar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="full_name">Nome Completo</string>

    <!-- Footer -->
    <string name="copy_right_fksc">Federação de Karatê Semi Contato © 1996&#8211;2018</string>


    <!-- Warnings -->
    <string name="fillin_all_fields">Preencha todos os campos</string>
    <string name="log_out">Sair</string>
    <string name="confirm_email_verification">Confirme sua conta no email: </string>
    <string name="failed_send_verification_email">Falha no envio da verificação de email</string>
    <string name="confirm_email_inbox">Confirme seu email na caixa de entrada</string>


    <!-- Database names -->
    <string name="dbname_users">users</string>
    <string name="dbname_users_settings">users_settings</string>
    <string name="dbname_users_about_me">users_about_me</string>

    <string name="dbname_dojos_info">dojos_info</string>
    <string name="dbname_dojos_settings">dojos_settings</string>
    <string name="dbname_dojo">dojo</string>

    <string name="dbname_championships_info">championships_info</string>
    <string name="dbname_championship">championship</string>

    <string name="dbname_photos">photos</string>
    <string name="dbname_user_photos">user_photos</string>


    <!-- Profile names -->
    <string name="registration">REGISTRO</string>
    <string name="belt">FAIXA</string>
    <string name="global_ranking">RANKING GLOBAL</string>
    <string name="about_me">Sobre mim</string>
    <string name="curriculum">Currículo</string>
    <string name="add_dojo">Adicionar Academia</string>
    <string name="cover_photo">Cover Photo</string>
    <string name="edit_profile">Editar Perfil</string>

    <!-- Edit Profile names -->
    <string name="choose">SELECIONAR</string>
    <string name="choose_cover_photo">Escolha uma Foto de Capa</string>
    <string name="choose_profile_photo">Escolha uma Foto de Perfil</string>
    <string name="write_about_me">Escreva sobre você</string>
    <string name="write_curriculum">Escreva o seu Currículo</string>

    <!-- Belt Colors -->
    <string name="black_belt">preta</string>
    <string name="edit_profile_success">Perfil editado com sucesso</string>

    <!-- Field Names -->
    <string name="field_dojo">dojo</string>
    <string name="field_full_name">full_name</string>
    <string name="field_profile_img_url">profile_img_url</string>
    <string name="field_registration_number">registration_number</string>
    <string name="field_verified">verified</string>
    <string name="field_dojo_number">dojo_number</string>


    <string name="field_about_me">about_me</string>
    <string name="field_cover_img_url">cover_img_url</string>
    <string name="field_curriculum">curriculum</string>

    <string name="field_belt_color">belt_color</string>
    <string name="field_birth_date">birth_date</string>
    <string name="field_user_id">user_id</string>

    <string name="field_dojo_name">name</string>
    <string name="field_city">city</string>

    <string name="field_address">address</string>
    <string name="field_telephone">telephone</string>
    <string name="field_description">description</string>

    <string name="field_date_hour">date_hour</string>


    <!-- Add Dojo(Gym) Fields -->
    <string name="add">ADICIONAR</string>
    <string name="name_of_your_dojo">Nome da sua academia</string>
    <string name="city">Cidade</string>
    <string name="complete_address">Endereço completo</string>
    <string name="add_your_dojo">ADICIONE SUA ACADEMIA</string>
    <string name="telephone">Telefone</string>
    <string name="write_about_your_dojo">Escreve sobre a sua Academia</string>
    <string name="dojo_add_successfuly">Academia adicionada com sucesso</string>
    <string name="must_fillin_all_fields">Você precisa preencher todos os campos</string>
    <string name="we_are_adding_your_dojo">Estamos adicionando sua academia</string>
    <string name="we_are_editing_your_dojo">Estamos editando sua academia</string>
    <string name="teacher_at_dojos">Professor nas Academias</string>
    <string name="what_to_do_with_this_dojo">O que você deseja fazer com essa Academia?</string>

    <!-- Commands -->
    <string name="delete">DELETAR</string>
    <string name="edit">EDITAR</string>

    <!-- Dojos -->
    <string name="dojo_deleted">Academia deletada</string>
    <string name="edit_your_dojo">EDITE SUA ACADEMIA</string>
    <string name="info_edit_success">Informação editada com sucesso</string>

    <!-- Share Activity -->
    <string name="gallery">GALERIA</string>
    <string name="camera">CAMERA</string>
    <string name="open_camera">ABRIR CAMERA</string>

    <!-- Loading -->
    <string name="please_wait">Por favor, aguarde&#8230;</string>
    <string name="take_some_minutes">Isso pode levar alguns minutos</string>
    <string name="depending_internet_connection">Dependendo da sua conexão com a internet</string>


    <!-- Photoypes -->
    <string name="photo_type_profile">profile_photo</string>
    <string name="photo_type_cover">cover_photo</string>
    <string name="photo_type">photo_type</string>
    <string name="photo_type_cover_photo_add">cover_photo_add_dojo</string>
    <string name="photo_type_cover_photo_edit">cover_photo_edit_dojo</string>

    <!-- Announcements -->
    <string name="choose_a_picture">Você precisa escolher uma foto</string>
    <string name="photo_added_successfully">Foto adicionada com sucesso</string>
    <string name="preparing_your_picture">Estamos preparando a sua foto</string>
    <string name="photo_failure">Houve um problema com a foto. Tente novamente</string>
    <string name="img_url">img_url</string>
    <string name="loading_picture">Carregando a foto:</string>
    <string name="search_for_fullname">Procure pelo nome COMPLETO</string>
    <string name="you_must_add_name">Você deve adicionar um nome</string>
    <string name="ok">OK</string>
    <string name="contact_for_more_information">Entre em contato para mais informações</string>
    <string name="cbksc">CBKSC</string>
    <string name="search_for_complete_name">Procure pelo nome completo</string>
    <string name="search_must_equal_name">A busca deve ser exatamente igual ao nome</string>
    <string name="upper_lower_letters">Note as letras maiúsculas, minúsculas e acentos</string>
    <string name="verified">verified</string>
    <string name="no_pictures_found">Nenhuma foto encontrada</string>
    <string name="swipe_to_the_side_and_take_newpictures">Deslize para o lado e tire sua primeira Foto!</string>


</resources>

