<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/affiliates_menu_bottomNaView"
        android:icon="@drawable/ic_affiliates"
        android:title="@string/filiados"
        app:showAsAction="always" />

    <item
        android:id="@+id/championShips_menu_bottomNaView"
        android:icon="@drawable/ic_trophy"
        android:title="@string/campeonatos"
        app:showAsAction="always" />

    <item
        android:id="@+id/ranking_menu_bottomNaView"
        android:icon="@drawable/ic_ranking"
        android:title="@string/ranking"
        app:showAsAction="always" />

    <item
        android:id="@+id/profile_menu_bottomNaView"
        android:icon="@drawable/ic_avatar_white"
        android:title="@string/profile"
        app:showAsAction="always"/>

</menu>