<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <!--***************** Email Field *****************-->
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appCompatEditText_email_fragmentRegister"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/rounded_edittext_login"
        android:hint="@string/email"
        android:textColorHint="@color/colorGrey400"
        android:textColor="@color/colorWhite"
        android:inputType="textEmailAddress"
        android:padding="12dp"/>

    <!--***************** FullName Field *****************-->
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appCompatEditText_fullname_fragmentRegister"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_edittext_login"
        android:layout_below="@+id/appCompatEditText_email_fragmentRegister"
        android:hint="@string/full_name"
        android:textColorHint="@color/colorGrey400"
        android:textColor="@color/colorWhite"
        android:inputType="text"
        android:padding="12dp"/>

    <!--***************** Password Field *****************-->
    <android.support.v7.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appCompatEditText_password_fragmentRegister"
        android:layout_margin="15dp"
        android:background="@drawable/rounded_edittext_login"
        android:layout_below="@+id/appCompatEditText_fullname_fragmentRegister"
        android:hint="@string/password"
        android:textColorHint="@color/colorGrey400"
        android:textColor="@color/colorWhite"
        android:inputType="textPassword"
        android:padding="12dp"/>

    <!--***************** Register Button *****************-->
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:id="@+id/appCompatButton_register_fragmentRegister"
        android:layout_below="@+id/appCompatEditText_password_fragmentRegister"
        android:text="@string/register"
        android:textColor="@color/colorWhite"
        android:textSize="16sp"
        android:background="@drawable/rounded_button_login"/>


    <!--***************** ProgressBar *****************-->
    <ProgressBar
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:id="@+id/progressBar_fragmentRegister"
        android:layout_below="@+id/appCompatButton_register_fragmentRegister"
        android:layout_centerHorizontal="true"/>



</RelativeLayout>