<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/carView_signOut"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="4dp">

            <RelativeLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txtView_whatToDo_DialogRemoveOrEdit"
                    android:text="@string/what_to_do_with_this_dojo"
                    android:textSize="18sp"
                    android:textColor="@color/colorBlack"
                    android:layout_centerHorizontal="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_below="@+id/txtView_whatToDo_DialogRemoveOrEdit"
                    android:layout_marginTop="10dp"
                    android:weightSum="100">

                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_remove_DialogRemoveOrEdit"
                        android:text="@string/delete"
                        android:layout_weight="50"
                        android:background="@drawable/grey500_stroke"/>

                    <android.support.v7.widget.AppCompatButton
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/button_edit_DialogRemoveOrEdit"
                        android:text="@string/edit"
                        android:layout_weight="50"
                        android:background="@drawable/grey500_stroke"/>

                </LinearLayout>


            </RelativeLayout>


        </android.support.v7.widget.CardView>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>