<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolBar_topBarAddDojoLayout"
            android:theme="@style/ToolbarColoredIcons"
            app:tabGravity="fill"
            app:tabMode="fixed">

            <!-- Container -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <!-- BACK BUTTON -->
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_back_button"
                    android:id="@+id/imgView_back_topBarAddDojoLayout"
                    android:layout_marginEnd="10dp"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription"/>

                <!-- FKSC LOGO -->
                <ImageView
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/logofkscsemfundo"
                    android:id="@+id/logoFKSC_topBarAddDojoLayout"
                    android:layout_toEndOf="@+id/imgView_back_topBarAddDojoLayout"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/logofksc"/>

                <!-- FKSC TITLE -->
                <TextView
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    android:textColor="@color/colorWhite"
                    android:textSize="20sp"
                    android:layout_toEndOf="@+id/logoFKSC_topBarAddDojoLayout"
                    android:layout_centerVertical="true"/>

                <!-- ADD BUTTON -->
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/add"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:id="@+id/txtView_add_topBarAddDojoLayout"
                    android:layout_centerVertical="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="5dp"/>

            </RelativeLayout>

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>


</merge>